tests/fixtures/fail/stdlib_http_header_newline_vm.walrus
import "std/http" as http;

http.response_with_headers(200, "ok", {"x-bad": "line1\nline2"});
